<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DailySelfie</string>
    <string name="about">About&#8230;</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="take_selfie">Take a new selfie!</string>
    <string name="no_camera">No camera present, can\'t take photos!</string>
    <string name="photo_taking_no">Photo taking NOT ready!</string>
    <string name="photo_taking_ok">Photo taking is ready!</string>
    <string name="help_guide">Press the camera icon to take your selfie!</string>
    <string name="selfies_dirname">MySelfies</string>
    <string name="TODO">TODO</string>
    <string name="details">Display image details</string>
    <string name="footer_text">Take your daily selfie!</string>
    <string name="delete_selfies">Delete all selfies</string>
    <string name="date_string">Date: </string>
    <string name="time_string">Time: </string>
    <string name="selfie_desc_string">Thumbnail Selfie</string>
    <string name="title_activity_selfie_detail">SelfieDetailActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
