<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/selfie1"
        android:layout_width="@dimen/thumbnail_selfie_width"
        android:layout_height="@dimen/thumbnail_selfie_height"
        android:contentDescription="@string/selfie_desc_string"/>

    <LinearLayout
        android:id="@+id/text_desc1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" 
        android:orientation="vertical"
        android:layout_toRightOf="@id/selfie1"
        android:padding="10dp" >

        <TextView
            android:id="@+id/date1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:text="@string/date_string"
            android:singleLine="true"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/time1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_string" 
            android:singleLine="true"
            android:ellipsize="end"/>

    </LinearLayout>

</RelativeLayout>
